# Kmeans-sequenatial-and-parallel

./: CMakeLists.txt  Cluster.h  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Kmeans_seq_parallel.sln  PointGeneretor.h  Seq_SoA_kmeans.h  Sequential.h  data.csv  kmeans_AoS.cpp  kmeans_SoA.cpp  main.cpp  omp_test.cpp  parallel_kmeans.cpp  plotting.py  points.csv  sequential_SoA.cpp
data/: centroids.csv  data.csv  output.csv  points.csv
include/: Cluster.h  PointGeneretor.h  Seq_AoS_kmeans.h  Seq_SoA_kmeans.h
